--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="http://cdn.sencha.com/ext/gpl/5.0.0/build/ext-all.js"></script> 
         <script type="text/javascript" src="http://cdn.sencha.com/ext/gpl/5.0.0/build/packages/ext-theme-neptune/build/ext-theme-neptune.js"></script>
 
-        <script type ="text/javascript" src="billiton.js"></script>
+        <script type ="text/javascript" src="index.js"></script>
     </head>
     <body></body>
 </html>
