--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
        	<link rel="stylesheet" type="text/css" href="http://cdn.sencha.com/ext/gpl/5.0.0/build/packages/ext-theme-neptune/build/resources/ext-theme-neptune-all.css">
         <link rel="stylesheet" type="text/css" href="extjs_style.css">
 
-        <script type="text/javascript" src="http://cdn.sencha.com/ext/gpl/5.0.0/build/ext-all.js"></script> 
+        <script type="text/javascript" src="http://cdn.sencha.com/ext/gpl/5.0.0/build/ext-all.js"></script>
         <script type="text/javascript" src="http://cdn.sencha.com/ext/gpl/5.0.0/build/packages/ext-theme-neptune/build/ext-theme-neptune.js"></script>
 
         <script type ="text/javascript" src="index.js"></script>
     </head>
-    <body></body>
+    <body> I add this row in the html file </body>
 </html>
