In master correct codes

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 
         <script type ="text/javascript" src="index.js"></script>
     </head>
-    <body> I add this row in the html file </body>
+    <body></body>
 </html>
